--- a/RadeonTuner/MainPage.xaml
+++ b/RadeonTuner/MainPage.xaml
@@ -118,14 +118,14 @@
                     <Button x:Name="button_Tuning_Reset" Click="button_Tuning_Reset_Click" Content="Reset" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Reset tuning and fans settings to it's defaults."/>
                     <Button x:Name="button_Tuning_Import" Click="button_Tuning_Import_Click" Content="Import" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Import tuning and fans settings from file."/>
                     <Button x:Name="button_Tuning_Export" Click="button_Tuning_Export_Click" Content="Export" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Export current tuning and fans settings to file."/>
-                    <Button x:Name="button_Tuning_Keep" Click="button_Tuning_Keep_Click" Content="Keep" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Keep current tuning and fans settings active after driver resets when 'Keep active' setting is enabled."/>
+                    <Button x:Name="button_Tuning_Keep" Click="button_Tuning_Keep_Click" Content="Keep active" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Keep current tuning and fans settings active after driver resets when the 'Keep active' setting is enabled."/>
                 </StackPanel>
                 <StackPanel x:Name="stackpanel_Fan_Buttons" Grid.Row="2" Margin="5" Orientation="Horizontal">
                     <Button x:Name="button_Fan_Apply" Click="button_Tuning_Apply_Click" Content="Apply" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Apply current tuning and fans settings."/>
                     <Button x:Name="button_Fan_Reset" Click="button_Tuning_Reset_Click" Content="Reset" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Reset tuning and fans settings to it's defaults."/>
                     <Button x:Name="button_Fan_Import" Click="button_Tuning_Import_Click" Content="Import" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Import tuning and fans settings from file."/>
                     <Button x:Name="button_Fan_Export" Click="button_Tuning_Export_Click" Content="Export" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Export current tuning and fans settings to file."/>
-                    <Button x:Name="button_Fan_Keep" Click="button_Tuning_Keep_Click" Content="Keep" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Keep current tuning and fans settings active after driver resets when 'Keep active' setting is enabled."/>
+                    <Button x:Name="button_Fan_Keep" Click="button_Tuning_Keep_Click" Content="Keep active" Margin="5,0,0,0" Width="100" Style="{ThemeResource ApplicationButton}" ToolTipService.ToolTip="Keep current tuning and fans settings active after driver resets when the 'Keep active' setting is enabled."/>
                 </StackPanel>
 
                 <!-- Main -->
@@ -855,7 +855,7 @@
                             <TextBlock Text="Overrides" Margin="0,10,0,0" FontSize="20" FontWeight="Medium"/>
 
                             <!-- HDCP Support -->
-                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                            <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
                                 <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="If High-bandwidth Digital Content Protection (HDCP) is disabled on this display, digitally protected content may be unplayable, or played at a lower resolution.&#10;&#10;* System restart required to take effect."/>
                                 <ToggleSwitch x:Name="toggleswitch_HDCPSupport" Margin="10,0,0,0" OffContent="HDCP Support" OnContent="HDCP Support" Toggled="toggleswitch_HDCPSupport_Toggled"/>
                             </StackPanel>
@@ -929,20 +929,10 @@
                         <!-- Settings -->
                         <StackPanel x:Name="stackpanel_Settings" Visibility="Collapsed">
                             <TextBlock Text="Overclock Settings" FontSize="20" FontWeight="Medium"/>
-
-                            <Border Margin="0,10,0,0" Padding="5" CornerRadius="8" Background="{ThemeResource ApplicationVoidGrayColor}">
-                                <StackPanel>
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Re-applies your tuning and fans settings when those have been reset to defaults by the GPU driver.&#10;&#10;* Make sure you are using stable tuning settings."/>
-                                        <ToggleSwitch x:Name="toggleswitch_ActiveOverclock" Margin="10,0,0,0" OffContent="Keep tuning and fan settings active" OnContent="Keep tuning and fan settings active" Toggled="toggleswitch_ActiveOverclock_Toggled"/>
-                                    </StackPanel>
-
-                                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                        <Button x:Name="button_ActiveOverclockFileSelect" Content="Select setting file" Style="{ThemeResource ApplicationButton}" Click="button_ActiveOverclockFileSelect_Click"/>
-                                        <TextBlock x:Name="textblock_ActiveOverclockFile" Margin="10,0,0,0" VerticalAlignment="Center" Text="..."/>
-                                    </StackPanel>
-                                </StackPanel>
-                            </Border>
+                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Re-applies your set tuning and fans settings when those have been reset to defaults by the GPU driver due to an unexpected system failure.&#10;&#10;* You can set the tuning and fans settings to keep active by clicking on 'Keep active' on the tuning tab.&#10;&#10;* Make sure you are using stable tuning settings."/>
+                                <ToggleSwitch x:Name="toggleswitch_ActiveOverclock" Margin="10,0,0,0" OffContent="Keep tuning and fans settings active" OnContent="Keep tuning and fans settings active" Toggled="toggleswitch_ActiveOverclock_Toggled"/>
+                            </StackPanel>
 
                             <TextBlock Text="Window Settings" FontSize="20" FontWeight="Medium" Margin="0,10,0,0"/>
                             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
