--- a/RadeonTuner/MainPage.xaml
+++ b/RadeonTuner/MainPage.xaml
@@ -337,6 +337,12 @@
                                 <ToggleSwitch x:Name="toggleswitch_OpenGLTripleBuffering" Margin="10,0,0,0" OffContent="OpenGL Triple Buffering" OnContent="OpenGL Triple Buffering" Toggled="toggleswitch_OpenGLTripleBuffering_Toggled"/>
                             </StackPanel>
 
+                            <!-- OpenGL 10-Bit Pixel Format -->
+                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Enables 10-Bit OpenGL buffer support for compatible displays and applications.&#10;&#10;* System restart required to take effect.&#10;&#10;* Changing this setting requires admin access."/>
+                                <ToggleSwitch x:Name="toggleswitch_OpenGL10Bit" Margin="10,0,0,0" OffContent="OpenGL 10-Bit Pixel Format" OnContent="OpenGL 10-Bit Pixel Format" Toggled="toggleswitch_OpenGL10Bit_Toggled"/>
+                            </StackPanel>
+
                             <!-- Reset Shader Cache -->
                             <Button x:Name="button_Reset_Shader_Cache" Click="button_Reset_Shader_Cache_Click" Content="Reset Shader Cache" Margin="0,10,0,0" ToolTipService.ToolTip="Clears contents of the disk-based shader cache." Style="{ThemeResource ApplicationButton}"/>
                         </StackPanel>
