--- a/RadeonTuner/MainPage.xaml
+++ b/RadeonTuner/MainPage.xaml
@@ -379,7 +379,7 @@
                             </StackPanel>
 
                             <!-- Microsoft HAGS Support -->
-                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal" Visibility="Collapsed">
                                 <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Hardware-Accelerated GPU Scheduling (HAGS) reduces latency and improves performance by moving more work to the graphics card.&#10;&#10;* System restart required to take effect.&#10;&#10;* Changing this setting requires admin access."/>
                                 <ToggleSwitch x:Name="toggleswitch_HagsSupport" Margin="10,0,0,0" OffContent="Microsoft HAGS Support" OnContent="Microsoft HAGS Support" Toggled="toggleswitch_HagsSupport_Toggled"/>
                             </StackPanel>
@@ -991,6 +991,12 @@
                             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                 <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Reapply your set tuning and fans settings when those have been reset to defaults by the GPU driver due to an unexpected system failure.&#10;&#10;* You can set the tuning and fans settings to keep active by clicking on 'Keep active' on the tuning tab.&#10;&#10;* Make sure you are using stable tuning settings."/>
                                 <ToggleSwitch x:Name="toggleswitch_ActiveOverclock" Margin="10,0,0,0" OffContent="Keep tuning and fans settings active" OnContent="Keep tuning and fans settings active" Toggled="toggleswitch_ActiveOverclock_Toggled"/>
+                            </StackPanel>
+
+                            <TextBlock Text="Launch Settings" FontSize="20" FontWeight="Medium" Margin="0,10,0,0"/>
+                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Launch this application on Windows startup automatically."/>
+                                <ToggleSwitch x:Name="toggleswitch_Launch_Startup" Margin="10,0,0,0" OffContent="Launch on Windows startup" OnContent="Launch on Windows startup" Toggled="toggleswitch_Launch_Startup_Toggled"/>
                             </StackPanel>
 
                             <TextBlock Text="Window Settings" FontSize="20" FontWeight="Medium" Margin="0,10,0,0"/>
